--- a/css/style.css
+++ b/css/style.css
@@ -319,14 +319,14 @@ a {
 .green-link:active {
   background-color: #00aa62;
   color: #4dc491;
-  -webkit-box-shadow:0 3px #009958 inset;
-  box-shadow:0 3px #009958 inset;
+  -webkit-box-shadow: 0 3px #009958 inset;
+  box-shadow: 0 3px #009958 inset;
 }
 .yellow-link:active {
   background-color: #e5a722;
   color: #edc265;
-  -webkit-box-shadow:0 3px #ce961f inset;
-  box-shadow:0 3px #ce961f inset;
+  -webkit-box-shadow: 0 3px #ce961f inset;
+  box-shadow: 0 3px #ce961f inset;
 }
 .about-us-studio {
   display: block;
@@ -517,7 +517,7 @@ a {
   line-height: 22px;
 }
 .footer-social ul {
-  list-style:none;
+  list-style: none;
 }
 .shop-template {
   margin: 0;
@@ -612,7 +612,7 @@ a {
 }
 .price-filter-output-field {
   width: 80px;
-  padding: 7px 0px;
+  padding: 7px 0;
   background-color: #eeeeee;
   font: inherit;
   border-radius: 3px;
@@ -658,7 +658,7 @@ a {
   padding-bottom: 16px;
 }
 .features-item {
-  padding-bottom: 16px;
+  padding-bottom: 15px;
 }
 input[type="checkbox"] + label {
   position: relative;
@@ -922,7 +922,7 @@ input[type="radio"]:disabled + label {
   cursor: pointer;
   width: 200px;
   background-color: #fb565a;
-  padding: 15px 0px;
+  padding: 15px 0;
   text-align: center;
   font-family: "Roboto" ,Arial, sans-serif;
   color: #ffffff;
@@ -1022,7 +1022,7 @@ input[type="radio"]:disabled + label {
   background-color: #ffffff;
   top: 58px;
   left: 15.8%;
-  padding: 48px 0px 0 48px;
+  padding: 48px 0 0 48px;
 }
 .map {
   width: 100%;
@@ -1101,8 +1101,8 @@ input[type="radio"]:disabled + label {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   z-index: 1000;
-  -webkit-box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
-  box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
+  -webkit-box-shadow: 0 20px 40px 0 rgba(0, 1, 1, 0.75);
+  box-shadow: 0 20px 40px 0 rgba(0, 1, 1, 0.75);
 }
 @-webkit-keyframes appear {
   0% { -webkit-transform: translateX(-2000px); transform: translateX(-2000px);}
